tebela responsiva e bug corrigido overflow do header

--- a/src/componentes/header.css
+++ b/src/componentes/header.css
@@ -8,7 +8,7 @@
     padding: 20px 0px;
     color: white;
     width: 100vw;
-    overflow: hidden;
+    
 }
 .info-left{
   display: flex;
@@ -24,6 +24,19 @@
 
   color: white;
 }
+@media only screen and (max-width: 700px) {
+  .all-conatiner-info{
+    OVERFLOW: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 103px;
+    width: 100vw;
+    justify-content: center;
+   
+  } 
+}
 @media only screen and (max-width: 635px) {
-  
+  .all-containter-wallet{
+    overflow: hidden;
+  } 
 }
