--- a/src/pages/FormInclusao.css
+++ b/src/pages/FormInclusao.css
@@ -39,5 +39,27 @@
   padding: 0px 10px;
   letter-spacing: 2px;
 }
-
-
+@media screen and (max-width: 1000px){
+  .container-form{
+    margin: 40px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .container-form span{
+    width: 100px;
+    margin: 0 5px;
+  }
+  label{
+    margin-top: 20px ;
+    display: flex;
+    align-items: center;
+  }
+  .value-input{
+    width: 100px;
+  }
+  .button-despesas{
+    margin-top: 20px;
+  }
+}
