--- a/src/pages/Wallet/Wallet.css
+++ b/src/pages/Wallet/Wallet.css
@@ -1,13 +1,14 @@
 .all-containter-wallet{
   padding: 0;
   margin: 0;
-  overflow-y: hidden;
+ 
 }
 
 .container-table{
   width: 100vw;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 table {
   border-collapse: collapse;   
@@ -55,7 +56,7 @@ td:first-of-type {
     font-size: 13px;
   }
 }
-@media only screen and (min-width : 800px) {
+@media only screen and (max-width : 800px) {
   table{
     width: 600px;
   }
@@ -64,9 +65,11 @@ td:first-of-type {
   }
 }
 
-@media only screen and (min-width : 600px) {
+@media only screen and (max-width : 600px) {
   table{
-    width: 300px;
+    width: 80vw;
+    margin: auto;
+    border-radius: 5px solid ;
   }
   table thead{
     font-size: 8px;
@@ -77,15 +80,27 @@ td:first-of-type {
   .td-Real{
     display: none;
   }
+  .container-table{
+    width: 100vw;
+    display: inline-block;
+    overflow-x: scroll;
+  }
 }
 
 
-@media only screen and (min-width : 250px) {
+@media only screen and (max-width : 250px) {
   table{
     width: 300px;
   }
   table thead{
     font-size: px;
+  }
+  .container-table{
+    width: 100vw;
+    overflow-x: scroll;
+  }
+  thead tr th:nth-child(7),  thead tr th:nth-child(1){
+    display: none;
   }
   .td-descripion{
     display: none;
